--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -45,6 +45,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb0d172b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "e45079ad",
    "metadata": {},
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -183,7 +191,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -212,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -317,7 +325,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -364,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -374,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -395,7 +403,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -431,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -441,7 +449,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
+   "id": "3eac6332",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         0.19399858,  0.39149181],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         1.42747598,  1.31326868],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         1.77010859,  1.64247471],\n",
+       "       ...,\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.12547206, -0.20107904],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.60515772,  0.58901542],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         1.15336989,  1.18158627]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -451,7 +492,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -472,7 +513,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
